# b-move

./: .gitmodules  CMakeLists.txt  README.md
2024/: README.md
2024/AMB/: README.md
2024/EColi/: EColi_NCBIReferenceSequenceIDs.txt  README.md
2024/HumanChromosome19/: README.md  SampleIDs.txt
cmake/: FindSDSL.cmake  FindSparseHash.cmake
search_schemes/pigeon/6/: searches.txt
search_schemes/pigeon_adapted/: reverse.py
src/: alphabet.h  benchmark.cpp  bitparallelmatrix.cpp  bitparallelmatrix.h  bitvec.h  bmove-build-pfp.sh  bmove.cpp  bmove.h  build.cpp  build.h  buildAuxiliary.h  buildMove.cpp  buildMove.h  buildhelpers.cpp  buildhelpers.h  definitions.h  indexhelpers.h  locate.cpp  logger.cpp  logger.h  main.h  move.cpp  move.h  moveElement.h  movephirepr.cpp  movephirepr.h  nucleotide.h  parameters.cpp  parameters.h  plcp.h  reads.h  rindex.cpp  rindex.h  rindexhelpers.cpp  rindexhelpers.h  rsearchstrategy.cpp  rsearchstrategy.h  search.cpp  search.h  sparseBitvec.h  (+5 more)
